Improve web client for mobile (fix issue with container overflow visible)

--- a/Demo/web_client/style.css
+++ b/Demo/web_client/style.css
@@ -1,18 +1,23 @@
-* {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        outline: 0;
-        font-size: 100%;
-        vertical-align: baseline;
-        background: transparent;
-    }
 
-#messages
-{
-font-size:3;
-line-height:140%;
-color:#8a919e;
+html { 
+	  font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
+	 background-color: #333d4f;
+	 color:#8a919e;
+	 font-style: normal;
+	 font-weight: normal;
+	 color:#ffbf00;
+}
+html, body{
+	margin: 0px;
+	padding: 0px;
+}
+.titleinfo{
+	position: absolute;
+	z-index: 3;
+	width:100%;
+	text-align: center;
+	top: 10px;
+	color:#ffbf00;
 }
 #status
 {
@@ -20,43 +25,39 @@ font-weight:bold;
 line-height:130%;
 color:#8a919e;
 }
-h1
-{
- font-size:100%;
- font-size: 64px;
- font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
- font-style: normal;
- font-weight: normal;
- text-decoration: none;
- color:#ffbf00;
+.info{
+	position: absolute;
+	width:100%;
+	height:200px;
+	text-align: center;
+	top: 400px;
+	color:#8a919e;
+}
+h1{
+	left: 50%;
+	font-size:100%;
+	font-size: 64px;
+	font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
+	 font-style: normal;
+	font-weight: normal;
+}
+p{
+	font-family: 'Arimo', sans-serif;
+	font-size: 11pt;
+	line-height: 14pt;
 }
 
-h2
-{
- font-size:100%;
- font-size: 24px;
- font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
- font-style: normal;
- font-weight: normal;
- text-decoration: none;
- color:#ffbf00;
+.container{
+	width:400px;
+	height:200px;
+	position: absolute;
+	top: 280px;
+	left: 50%;
+	overflow: hidden;
+	text-align: center;
+	transform: translate(-50%, -50%);
 }
 
-body
-{
- margin: 0;
- border: 0;
- vertical-align: baseline;
- float:left;
- padding: 50px;
- font-size:100%;
- font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
- background-color: #333d4f;
- color:#8a919e;
-}
-hr{
-color:#8a919e;
-}
 
 .gauge-a{
 	z-index: 1;
@@ -91,50 +92,27 @@ color:#8a919e;
 	transform-origin:center top;
 	transition: all 1.3s ease-in-out;
 }
-
 .gauge-d{
 	z-index: 5;
-	color: rgba(255,255,255,.2);
-	font-size: 1.5em;
+	font-size: 1.0em;
 	line-height: 25px;
 	position: absolute;
 	width: 400px;
 	height: 200px;
-	top: 176px;
+	top: 150px;
 	margin-left: auto;
 	margin-right: auto;
 	transition: all 1s ease-out;
 }
 
-.container{
-	width:400px;
-	height:200px;
-	float: left;
-	margin-top: 120px;
-	margin-left: 200px;
-	overflow: hidden;
-	text-align: center;
-	transform: translate(-50%, -50%);
-	
-}
-
-.info{
-clear:both; 
-}
-
-.container:hover .gauge-data{
-	color: rgba(255,255,255,1);
-}
-
 .gauge-data{
 	z-index: 4;
-	color: rgba(255,255,255,.2);
-	font-size: 1.5em;
 	line-height: 25px;
+	font-size: 0.5em;
 	position: absolute;
 	width: 400px;
 	height: 200px;
-	top: 120px;
+	top: 75px;
 	margin-left: auto;
 	margin-right: auto;
 	transition: all 1s ease-out;
